# silly_embeddings

./: .env  .gitignore  README.md  pyproject.toml
silly_embeddings/: embeddings.py
